Restored UPR/v2_tetris submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ALG"]
 	path = ALG
 	url = https://github.com/jazafier00716/ALG
+[submodule "UPR/tetris_clone"]
+	path = UPR/tetris_clone
+	url = https://github.com/jazafier00716/tetris_clone
